dartagnan/target/generated-sources/antlr4/dartagnan/LitmusPPCParser.java
// Generated from LitmusPPC.g4 by ANTLR 4.7

package dartagnan;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LitmusPPCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, LitmusLanguage=38, 
		Register=39, Label=40, ThreadIdentifier=41, AssertionExistsNot=42, AssertionExists=43, 
		AssertionFinal=44, AssertionForall=45, LogicAnd=46, LogicOr=47, Identifier=48, 
		DigitSequence=49, Word=50, Whitespace=51, Newline=52, BlockComment=53, 
		ExecConfig=54;
	public static final int
		RULE_main = 0, RULE_header = 1, RULE_headerComment = 2, RULE_variableDeclaratorList = 3, 
		RULE_variableDeclarator = 4, RULE_variableDeclaratorLocation = 5, RULE_variableDeclaratorRegister = 6, 
		RULE_variableDeclaratorRegisterLocation = 7, RULE_variableList = 8, RULE_variable = 9, 
		RULE_threadDeclaratorList = 10, RULE_instructionList = 11, RULE_instructionRow = 12, 
		RULE_instruction = 13, RULE_none = 14, RULE_li = 15, RULE_lwz = 16, RULE_lwzx = 17, 
		RULE_stw = 18, RULE_stwx = 19, RULE_mr = 20, RULE_addi = 21, RULE_xor = 22, 
		RULE_cmpw = 23, RULE_label = 24, RULE_b = 25, RULE_beq = 26, RULE_bne = 27, 
		RULE_blt = 28, RULE_bgt = 29, RULE_ble = 30, RULE_bge = 31, RULE_sync = 32, 
		RULE_lwsync = 33, RULE_isync = 34, RULE_eieio = 35, RULE_thread = 36, 
		RULE_r1 = 37, RULE_r2 = 38, RULE_r3 = 39, RULE_location = 40, RULE_value = 41, 
		RULE_offset = 42, RULE_assertionList = 43, RULE_assertion = 44, RULE_assertionListExpectationList = 45, 
		RULE_assertionListExpectation = 46, RULE_assertionListExpectationTest = 47;
	public static final String[] ruleNames = {
		"main", "header", "headerComment", "variableDeclaratorList", "variableDeclarator", 
		"variableDeclaratorLocation", "variableDeclaratorRegister", "variableDeclaratorRegisterLocation", 
		"variableList", "variable", "threadDeclaratorList", "instructionList", 
		"instructionRow", "instruction", "none", "li", "lwz", "lwzx", "stw", "stwx", 
		"mr", "addi", "xor", "cmpw", "label", "b", "beq", "bne", "blt", "bgt", 
		"ble", "bge", "sync", "lwsync", "isync", "eieio", "thread", "r1", "r2", 
		"r3", "location", "value", "offset", "assertionList", "assertion", "assertionListExpectationList", 
		"assertionListExpectation", "assertionListExpectationTest"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "';'", "'}'", "'='", "':'", "'locations'", "'['", "']'", 
		"'|'", "'li'", "','", "'lwz'", "'('", "')'", "'lwzx'", "'stw'", "'stwx'", 
		"'mr'", "'addi'", "'xor'", "'cmpw'", "'b'", "'beq'", "'bne'", "'blt'", 
		"'bgt'", "'ble'", "'bge'", "'sync'", "'lwsync'", "'isync'", "'eieio'", 
		"'with'", "'tso'", "'cc'", "'optic'", "'default'", null, null, null, null, 
		null, "'exists'", "'final'", "'forall'", "'/\\'", "'\\/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "LitmusLanguage", "Register", "Label", "ThreadIdentifier", 
		"AssertionExistsNot", "AssertionExists", "AssertionFinal", "AssertionForall", 
		"LogicAnd", "LogicOr", "Identifier", "DigitSequence", "Word", "Whitespace", 
		"Newline", "BlockComment", "ExecConfig"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LitmusPPC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LitmusPPCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MainContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public VariableDeclaratorListContext variableDeclaratorList() {
			return getRuleContext(VariableDeclaratorListContext.class,0);
		}
		public ThreadDeclaratorListContext threadDeclaratorList() {
			return getRuleContext(ThreadDeclaratorListContext.class,0);
		}
		public InstructionListContext instructionList() {
			return getRuleContext(InstructionListContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LitmusPPCParser.EOF, 0); }
		public VariableListContext variableList() {
			return getRuleContext(VariableListContext.class,0);
		}
		public AssertionListContext assertionList() {
			return getRuleContext(AssertionListContext.class,0);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusPPCVisitor ) return ((LitmusPPCVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			header();
			setState(97);
			variableDeclaratorList();
			setState(98);
			threadDeclaratorList();
			setState(99);
			instructionList();
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(100);
				variableList();
				}
			}

			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AssertionExistsNot) | (1L << AssertionExists) | (1L << AssertionFinal) | (1L << AssertionForall))) != 0)) {
				{
				setState(103);
				assertionList();
				}
			}

			setState(106);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode LitmusLanguage() { return getToken(LitmusPPCParser.LitmusLanguage, 0); }
		public HeaderCommentContext headerComment() {
			return getRuleContext(HeaderCommentContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusPPCVisitor ) return ((LitmusPPCVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(LitmusLanguage);
			setState(109);
			headerComment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderCommentContext extends ParserRuleContext {
		public HeaderCommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headerComment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusPPCVisitor ) return ((LitmusPPCVisitor<? extends T>)visitor).visitHeaderComment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderCommentContext headerComment() throws RecognitionException {
		HeaderCommentContext _localctx = new HeaderCommentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_headerComment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << LitmusLanguage) | (1L << Register) | (1L << Label) | (1L << ThreadIdentifier) | (1L << AssertionExistsNot) | (1L << AssertionExists) | (1L << AssertionFinal) | (1L << AssertionForall) | (1L << LogicAnd) | (1L << LogicOr) | (1L << Identifier) | (1L << DigitSequence) | (1L << Word) | (1L << Whitespace) | (1L << Newline) | (1L << BlockComment) | (1L << ExecConfig))) != 0)) {
				{
				{
				setState(111);
				_la = _input.LA(1);
				if ( _la <= 0 || (_la==T__0) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclaratorListContext extends ParserRuleContext {
		public List<VariableDeclaratorContext> variableDeclarator() {
			return getRuleContexts(VariableDeclaratorContext.class);
		}
		public VariableDeclaratorContext variableDeclarator(int i) {
			return getRuleContext(VariableDeclaratorContext.class,i);
		}
		public VariableDeclaratorListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaratorList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusPPCVisitor ) return ((LitmusPPCVisitor<? extends T>)visitor).visitVariableDeclaratorList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclaratorListContext variableDeclaratorList() throws RecognitionException {
		VariableDeclaratorListContext _localctx = new VariableDeclaratorListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variableDeclaratorList);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(T__0);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ThreadIdentifier) | (1L << Identifier) | (1L << DigitSequence))) != 0)) {
				{
				setState(118);
				variableDeclarator();
				}
			}

			setState(125);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(121);
					match(T__1);
					setState(122);
					variableDeclarator();
					}
					} 
				}
				setState(127);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(128);
				match(T__1);
				}
			}

			setState(131);
			match(T__2);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(132);
				match(T__1);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclaratorContext extends ParserRuleContext {
		public VariableDeclaratorLocationContext variableDeclaratorLocation() {
			return getRuleContext(VariableDeclaratorLocationContext.class,0);
		}
		public VariableDeclaratorRegisterContext variableDeclaratorRegister() {
			return getRuleContext(VariableDeclaratorRegisterContext.class,0);
		}
		public VariableDeclaratorRegisterLocationContext variableDeclaratorRegisterLocation() {
			return getRuleContext(VariableDeclaratorRegisterLocationContext.class,0);
		}
		public VariableDeclaratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclarator; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusPPCVisitor ) return ((LitmusPPCVisitor<? extends T>)visitor).visitVariableDeclarator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclaratorContext variableDeclarator() throws RecognitionException {
		VariableDeclaratorContext _localctx = new VariableDeclaratorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableDeclarator);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				variableDeclaratorLocation();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				variableDeclaratorRegister();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(137);
				variableDeclaratorRegisterLocation();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclaratorLocationContext extends ParserRuleContext {
		public LocationContext location() {
			return getRuleContext(LocationContext.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public VariableDeclaratorLocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaratorLocation; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusPPCVisitor ) return ((LitmusPPCVisitor<? extends T>)visitor).visitVariableDeclaratorLocation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclaratorLocationContext variableDeclaratorLocation() throws RecognitionException {
		VariableDeclaratorLocationContext _localctx = new VariableDeclaratorLocationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableDeclaratorLocation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			location();
			setState(141);
			match(T__3);
			setState(142);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclaratorRegisterContext extends ParserRuleContext {
		public ThreadContext thread() {
			return getRuleContext(ThreadContext.class,0);
		}
		public R1Context r1() {
			return getRuleContext(R1Context.class,0);
		}
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public VariableDeclaratorRegisterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaratorRegister; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusPPCVisitor ) return ((LitmusPPCVisitor<? extends T>)visitor).visitVariableDeclaratorRegister(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclaratorRegisterContext variableDeclaratorRegister() throws RecognitionException {
		VariableDeclaratorRegisterContext _localctx = new VariableDeclaratorRegisterContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variableDeclaratorRegister);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			thread();
			setState(145);
			match(T__4);
			setState(146);
			r1();
			setState(147);
			match(T__3);
			setState(148);
			value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclaratorRegisterLocationContext extends ParserRuleContext {
		public ThreadContext thread() {
			return getRuleContext(ThreadContext.class,0);
		}
		public R1Context r1() {
			return getRuleContext(R1Context.class,0);
		}
		public LocationContext location() {
			return getRuleContext(LocationContext.class,0);
		}
		public VariableDeclaratorRegisterLocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaratorRegisterLocation; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusPPCVisitor ) return ((LitmusPPCVisitor<? extends T>)visitor).visitVariableDeclaratorRegisterLocation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclaratorRegisterLocationContext variableDeclaratorRegisterLocation() throws RecognitionException {
		VariableDeclaratorRegisterLocationContext _localctx = new VariableDeclaratorRegisterLocationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variableDeclaratorRegisterLocation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			thread();
			setState(151);
			match(T__4);
			setState(152);
			r1();
			setState(153);
			match(T__3);
			setState(154);
			location();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableListContext extends ParserRuleContext {
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public VariableListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusPPCVisitor ) return ((LitmusPPCVisitor<? extends T>)visitor).visitVariableList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableListContext variableList() throws RecognitionException {
		VariableListContext _localctx = new VariableListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variableList);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(T__5);
			setState(157);
			match(T__6);
			setState(158);
			variable();
			setState(163);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(159);
					match(T__1);
					setState(160);
					variable();
					}
					} 
				}
				setState(165);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(166);
				match(T__1);
				}
			}

			setState(169);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public LocationContext location() {
			return getRuleContext(LocationContext.class,0);
		}
		public ThreadContext thread() {
			return getRuleContext(ThreadContext.class,0);
		}
		public R1Context r1() {
			return getRuleContext(R1Context.class,0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusPPCVisitor ) return ((LitmusPPCVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_variable);
		try {
			setState(176);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(171);
				location();
				}
				break;
			case ThreadIdentifier:
			case DigitSequence:
				enterOuterAlt(_localctx, 2);
				{
				setState(172);
				thread();
				setState(173);
				match(T__4);
				setState(174);
				r1();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ThreadDeclaratorListContext extends ParserRuleContext {
		public List<ThreadContext> thread() {
			return getRuleContexts(ThreadContext.class);
		}
		public ThreadContext thread(int i) {
			return getRuleContext(ThreadContext.class,i);
		}
		public ThreadDeclaratorListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_threadDeclaratorList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusPPCVisitor ) return ((LitmusPPCVisitor<? extends T>)visitor).visitThreadDeclaratorList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ThreadDeclaratorListContext threadDeclaratorList() throws RecognitionException {
		ThreadDeclaratorListContext _localctx = new ThreadDeclaratorListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_threadDeclaratorList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			thread();
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(179);
				match(T__8);
				setState(180);
				thread();
				}
				}
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(186);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionListContext extends ParserRuleContext {
		public List<InstructionRowContext> instructionRow() {
			return getRuleContexts(InstructionRowContext.class);
		}
		public InstructionRowContext instructionRow(int i) {
			return getRuleContext(InstructionRowContext.class,i);
		}
		public InstructionListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructionList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusPPCVisitor ) return ((LitmusPPCVisitor<? extends T>)visitor).visitInstructionList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionListContext instructionList() throws RecognitionException {
		InstructionListContext _localctx = new InstructionListContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_instructionList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(188);
				instructionRow();
				}
				}
				setState(191); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__8) | (1L << T__9) | (1L << T__11) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << Label))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionRowContext extends ParserRuleContext {
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public InstructionRowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructionRow; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LitmusPPCVisitor ) return ((LitmusPPCVisitor<? extends T>)visitor).visitInstructionRow(this);
			else return visitor.visitChildren(this);
		}
	}
